--- a/deployment-scripts/helm-charts/deepfence-console/templates/backend/deployment.yaml
+++ b/deployment-scripts/helm-charts/deepfence-console/templates/backend/deployment.yaml
@@ -154,19 +154,13 @@ spec:
                   key: port
             - name: KAFKA_BROKERS
               valueFrom:
-                configMapKeyRef:
-                  name: "main-cm-{{ include "deepfence-console.fullname" . }}"
+                secretKeyRef:
+                  name: kafka-secret-{{ include "deepfence-console.fullname" . }}
                   key: kafka_brokers
             - name: KAFKA_TOPIC_REPLICAS
-              valueFrom:
-                configMapKeyRef:
-                  name: "main-cm-{{ include "deepfence-console.fullname" . }}"
-                  key: kafka_topic_replicas
+              value: "{{ .Values.db.kafka.kafka_topic_replicas }}"
             - name: KAFKA_TOPIC_RETENTION_MS
-              valueFrom:
-                configMapKeyRef:
-                  name: "main-cm-{{ include "deepfence-console.fullname" . }}"
-                  key: kafka_topic_retention_ms
+              value: "{{ .Values.db.kafka.kafka_topic_retention_ms }}"
           resources:
             {{- toYaml .Values.backend.resources | nindent 12 }}
           ports:
