--- a/deployment-scripts/helm-charts/deepfence-console/values.yaml
+++ b/deployment-scripts/helm-charts/deepfence-console/values.yaml
@@ -52,8 +52,8 @@ managementConsolePort: "443"
 deepfenceUrl: ""
 
 volume:
-  storageClass: openebs-hostpath
-  # Change stoage class when using different PV provisioner.
+  storageClass: ""
+  # Change storage class when using different PV provisioner.
   # For example, it will be 'openebs-hostpath' when using openebs
   # or it will be 'default' when using cloud managed Persistent Volumes.
   esStorage: 30Gi
@@ -90,15 +90,16 @@ db:
   redis:
     host: deepfence-redis
     port: "6379"
+  kafka_rest: deepfence-rest-proxy:8082
   kafka:
     broker: deepfence-kafka-broker:9092
-    kafka_topic_replicas: 3
-    kafka_topic_retention_ms: "86400000"
-    # set this to new value when kafka resplicas is >1
-    # to generate download kafka and run "kafka-storage random-uuid"
-    # storageUUID: ""
+    ## set this to new value when kafka resplicas is >1
+    ## to generate download kafka and run "kafka-storage random-uuid"
+    ## storageUUID: ""
     storageUUID: hNQ55qppT5GGybF52ZGlOQ
-  kafka_rest: deepfence-rest-proxy:8082
+    ## topic configurations
+    kafka_topic_replicas: 3
+    kafka_topic_retention_ms: 86400000
 
 # (Optional) Set custom name for the cluster and hostname prefix for console vm's to easily identify in Deepfence UI.
 # Example: df-console or deepfence-console
@@ -477,6 +478,14 @@ malwareScanner:
       - name: docker-deepfence-malware
   nameOverride: ""
   fullnameOverride: ""
+
+  resources:
+    requests:
+      cpu: 100m
+      memory: 100Mi
+    limits:
+      cpu: 4000m
+      memory: 4Gi
 
   autoscaling:
     enabled: false
