--- a/deepfence_frontend/package.json
+++ b/deepfence_frontend/package.json
@@ -11,7 +11,8 @@
     "dev": "turbo run dev --parallel",
     "lint": "turbo run lint",
     "lint:fix": "turbo run lint:fix",
-    "format": "prettier  --loglevel warn --write \"./**/*.{js,jsx,ts,tsx,css,md,json}\""
+    "format": "prettier --check \"./**/*.{js,jsx,ts,tsx,css,md,json}\"",
+    "format:fix": "prettier  --loglevel warn --write \"./**/*.{js,jsx,ts,tsx,css,md,json}\""
   },
   "devDependencies": {
     "prettier": "latest",
