--- a/deepfence_frontend/packages/ui-components/package.json
+++ b/deepfence_frontend/packages/ui-components/package.json
@@ -81,7 +81,6 @@
     "eslint-plugin-simple-import-sort": "^8.0.0",
     "eslint-plugin-storybook": "^0.6.7",
     "jsdom": "^20.0.0",
-    "msw": "^0.47.3",
     "postcss": "^8.4.16",
     "react": "^18.2.0",
     "resize-observer-polyfill": "^1.5.1",
@@ -90,8 +89,7 @@
     "typescript": "^4.8.3",
     "vite": "^3.1.2",
     "vite-plugin-dts": "^1.7.1",
-    "vitest": "^0.23.4",
-    "whatwg-fetch": "^3.6.2"
+    "vitest": "^0.23.4"
   },
   "engines": {
     "node": ">=16"
