--- a/deepfence_frontend/turbo.json
+++ b/deepfence_frontend/turbo.json
@@ -11,6 +11,9 @@
     "lint:fix": {
       "outputs": []
     },
+    "test": {
+      "outputs": []
+    },
     "dev": {
       "cache": false
     }
