--- a/deepfence_frontend/package.json
+++ b/deepfence_frontend/package.json
@@ -7,6 +7,7 @@
     "packages/*"
   ],
   "scripts": {
+    "test": "turbo run test -- --run",
     "build": "turbo run build",
     "dev": "turbo run dev --parallel",
     "lint": "turbo run lint",
@@ -21,5 +22,5 @@
   "engines": {
     "node": ">=16.0.0"
   },
-  "packageManager": "npm@8.15.0"
+  "packageManager": "pnpm@7.17.1"
 }
