--- a/deepfence_frontend/apps/dashboard/package.json
+++ b/deepfence_frontend/apps/dashboard/package.json
@@ -10,7 +10,9 @@
     "lint": "eslint ./src --ext .jsx,.js,.ts,.tsx --quiet --ignore-path ./.gitignore",
     "lint:fix": "eslint ./src --ext .jsx,.js,.ts,.tsx --quiet --fix --ignore-path ./.gitignore",
     "test": "vitest",
-    "coverage": "vitest run --coverage"
+    "coverage": "vitest run --coverage",
+    "playwright": "playwright test",
+    "playwright:debug": "playwright test --debug"
   },
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
@@ -20,6 +22,7 @@
     "ui-components": "workspace:*"
   },
   "devDependencies": {
+    "@playwright/test": "^1.28.1",
     "@testing-library/react": "^13.4.0",
     "@types/react": "^18.0.24",
     "@types/react-dom": "^18.0.8",
@@ -37,6 +40,7 @@
     "eslint-plugin-react": "^7.31.11",
     "eslint-plugin-simple-import-sort": "^8.0.0",
     "msw": "^0.49.1",
+    "playwright": "1.28.1",
     "postcss": "^8.4.19",
     "resize-observer-polyfill": "^1.5.1",
     "tailwindcss": "^3.2.4",
