--- a/deepfence_frontend/packages/ui-components/package.json
+++ b/deepfence_frontend/packages/ui-components/package.json
@@ -86,6 +86,7 @@
     "resize-observer-polyfill": "^1.5.1",
     "rollup-plugin-visualizer": "^5.8.3",
     "storybook-dark-mode": "^1.1.2",
+    "tailwind-preset": "workspace:*",
     "tailwindcss": "^3.1.8",
     "typescript": "^4.8.3",
     "vite": "^3.1.2",
