--- a/deepfence_server/Dockerfile
+++ b/deepfence_server/Dockerfile
@@ -2,6 +2,7 @@ FROM golang:1.19-alpine3.16 AS build
 
 ADD deepfence_server /go/deepfence_server/
 ADD deepfence_worker /go/deepfence_worker/
+ADD deepfence_utils /go/deepfence_utils/
 WORKDIR /go/deepfence_server/
 RUN apk add --no-cache git \
     && go mod tidy \
@@ -23,11 +24,12 @@ ENV POSTGRES_USER_DB_HOST=deepfence-postgres \
     HTTP_LISTEN_ENDPOINT=8080 \
     SAAS_DEPLOYMENT=false
 
-COPY --from=build /tmp/deepfence_server /usr/local/bin/deepfence_server
+ADD deepfence_server/auth /auth
 COPY deepfence_server/entrypoint.sh /entrypoint.sh
 RUN apk add --no-cache --update bash curl \
     && apk add --no-cache postgresql-client --repository=https://dl-cdn.alpinelinux.org/alpine/v3.14/main \
     && chmod +x /entrypoint.sh
+COPY --from=build /tmp/deepfence_server /usr/local/bin/deepfence_server
 
 EXPOSE 8080
 ENTRYPOINT ["/entrypoint.sh"]
