update ui dependancies

--- a/.github/workflows/ui-checks.yaml
+++ b/.github/workflows/ui-checks.yaml
@@ -40,7 +40,7 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-pnpm-store-
       - name: Install dependencies
-        run: pnpm install --frozen-lockfile
+        run: pnpm install --frozen-lockfile --prefer-offline
       - name: Build
         run: pnpm build
       - name: Check formatting
