Expose server port

--- a/deployment-scripts/docker-compose.yml
+++ b/deployment-scripts/docker-compose.yml
@@ -139,6 +139,8 @@ services:
       - deepfence-redis
       - deepfence-postgres
       - deepfence-neo4j
+    ports:
+      - "8080:8080"
     volumes:
       - /etc/docker/certs.d:/etc/docker/certs.d:ro
     logging:
