add path aliases for components package

--- a/deepfence_frontend/.vscode/settings.json
+++ b/deepfence_frontend/.vscode/settings.json
@@ -3,5 +3,6 @@
   "editor.defaultFormatter": "esbenp.prettier-vscode",
   "[javascript]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
-  }
+  },
+  "typescript.preferences.importModuleSpecifier": "non-relative"
 }
