--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,6 @@
 .DS_Store
 .vscode
 !/deepfence_frontend/.vscode/
+deepfence_frontend/console_version.txt
+deepfence_frontend/product_version.txt
 deepfence_agent/tools/apache/scope/proto/
