--- a/deepfence_frontend/Dockerfile
+++ b/deepfence_frontend/Dockerfile
@@ -1,4 +1,4 @@
-FROM node:16.11-bullseye-slim
+FROM node:16.11-bullseye-slim as build
 
 WORKDIR /home/deepfence/
 ADD . /home/deepfence/
@@ -7,6 +7,10 @@ RUN apt-get update \
     && pnpm install \
     && pnpm run build
 
-#FROM nginx:1.23-alpine
-#MAINTAINER Deepfence Inc
-#LABEL deepfence.role=system
+FROM nginx:1.23-alpine
+MAINTAINER Deepfence Inc
+LABEL deepfence.role=system
+
+RUN apk upgrade --no-cache -U \
+    && rm /usr/share/nginx/html/*
+COPY --from=build /home/deepfence/apps/dashboard/dist/* /usr/share/nginx/html
