--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,11 @@ _testmain.go
 *.exe
 *.test
 *.prof
+
+.idea
+.DS_Store
+.vscode
+!/deepfence_frontend/.vscode/
+deepfence_frontend/console_version.txt
+deepfence_frontend/product_version.txt
+deepfence_agent/tools/apache/scope/proto/
