--- a/deepfence_frontend/Dockerfile
+++ b/deepfence_frontend/Dockerfile
@@ -13,4 +13,4 @@ LABEL deepfence.role=system
 
 RUN apk upgrade --no-cache -U \
     && rm /usr/share/nginx/html/*
-COPY --from=build /home/deepfence/apps/dashboard/dist/* /usr/share/nginx/html
+COPY --from=build /home/deepfence/apps/dashboard/dist/ /usr/share/nginx/html
