optimize ui dockerfile

--- a/deepfence_frontend/Dockerfile
+++ b/deepfence_frontend/Dockerfile
@@ -1,11 +1,17 @@
-ARG DF_IMG_TAG=latest
-ARG IMAGE_NAME=deepfence_ui_build
-FROM $IMAGE_NAME:$DF_IMG_TAG AS build
+FROM node:18-bullseye as build-stage
+RUN mkdir -p /app
+WORKDIR /app
+RUN corepack enable
+RUN corepack prepare pnpm@7.17.1 --activate
+COPY pnpm-lock.yaml ./
+RUN PLAYWRIGHT_SKIP_BROWSER_DOWNLOAD=true pnpm fetch
+COPY . .
+RUN PLAYWRIGHT_SKIP_BROWSER_DOWNLOAD=true pnpm install --offline --frozen-lockfile
+RUN pnpm run build
 
-FROM nginx:1.23-alpine
-MAINTAINER Deepfence Inc
-LABEL deepfence.role=system
-
-RUN apk upgrade --no-cache -U \
-    && rm /usr/share/nginx/html/*
-COPY --from=build /home/deepfence/apps/dashboard/dist/ /usr/share/nginx/html
+FROM nginx:stable-alpine as production-stage
+COPY nginx.conf /etc/nginx/conf.d/default.conf
+RUN rm -rf /usr/share/nginx/html/*
+COPY --from=build-stage /app/apps/dashboard/dist /usr/share/nginx/html
+EXPOSE 8080
+CMD ["nginx", "-g", "daemon off;"]
