--- a/haproxy/haproxy.cfg
+++ b/haproxy/haproxy.cfg
@@ -3,7 +3,7 @@ global
     maxconn 500000
     cpu-map auto:1/1-4 0-3
     tune.ssl.default-dh-param 2048
-    log 127.0.0.1 local0
+    log stdout format raw local0
 
     # generated 2022-11-08, Mozilla Guideline v5.6, HAProxy 2.4.17, OpenSSL 1.1.1, intermediate configuration, no OCSP
     # https://ssl-config.mozilla.org/#server=haproxy&version=2.4.17&config=intermediate&openssl=1.1.1&ocsp=false&guideline=5.6
