--- a/deepfence_frontend/Dockerfile
+++ b/deepfence_frontend/Dockerfile
@@ -4,4 +4,8 @@ LABEL deepfence.role=system
 
 RUN apk upgrade --no-cache -U \
     && rm /usr/share/nginx/html/*
+COPY nginx.conf /etc/nginx/conf.d/default.conf
 COPY ./apps/dashboard/dist/ /usr/share/nginx/html
+
+EXPOSE 8081
+CMD ["nginx", "-g", "daemon off;"]
