make node 18 min version for ui

--- a/deepfence_frontend/packages/tailwind-preset/package.json
+++ b/deepfence_frontend/packages/tailwind-preset/package.json
@@ -5,5 +5,8 @@
   "main": "index.js",
   "scripts": {},
   "keywords": [],
-  "author": "Manan Vaghasiya"
+  "author": "Manan Vaghasiya",
+  "engines": {
+    "node": ">=18.0.0"
+  }
 }
