--- a/deepfence_frontend/apps/dashboard/package.json
+++ b/deepfence_frontend/apps/dashboard/package.json
@@ -49,5 +49,8 @@
     "vite": "^3.2.3",
     "vitest": "^0.25.3",
     "whatwg-fetch": "^3.6.2"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
