--- a/deepfence_frontend/apps/dashboard/package.json
+++ b/deepfence_frontend/apps/dashboard/package.json
@@ -20,6 +20,7 @@
     "classnames": "^2.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.4.0",
     "react-router-dom": "^6.4.3",
     "ui-components": "workspace:*"
   },
