--- a/deepfence_server/Dockerfile
+++ b/deepfence_server/Dockerfile
@@ -3,6 +3,7 @@ FROM golang:1.19-alpine3.16 AS build
 ADD deepfence_server /go/deepfence_server/
 ADD deepfence_worker /go/deepfence_worker/
 ADD deepfence_utils /go/deepfence_utils/
+ADD deepfence_server_client /go/deepfence_server_client/
 RUN mkdir -p /go/deepfence_agent/tools/apache
 ADD deepfence_agent/tools/apache /go/deepfence_agent/tools/apache
 WORKDIR /go/deepfence_server/
