add deepfence_ingester (https://github.com/deepfence/ThreatMapper/issues/728)

--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,5 @@ deepfence_frontend/console_version.txt
 deepfence_frontend/product_version.txt
 
 deepfence_agent/tools/apache/scope/proto/
+deepfence_ingester/vendor
+deepfence_ingester/deepfence_ingester
