--- a/deployment-scripts/docker-compose.yml
+++ b/deployment-scripts/docker-compose.yml
@@ -261,6 +261,19 @@ services:
       options:
         max-size: "1g"
 
+  deepfence-ingester:
+    image: ${IMAGE_REPOSITORY:-deepfenceio}/deepfence_ingester_ce:${DF_IMG_TAG:-1.3.0}
+    hostname: deepfence-ingester
+    container_name: deepfence-ingester
+    ports:
+      - "127.0.0.1:8090:8090"
+    networks:
+      - deepfence_net
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "1g"
+
 volumes:
   deepfence_data:
     driver: local
