--- a/.gitignore
+++ b/.gitignore
@@ -31,5 +31,8 @@ deepfence_frontend/console_version.txt
 deepfence_frontend/product_version.txt
 
 deepfence_agent/tools/apache/scope/proto/
+
+deepfence_server/vendor
+
 deepfence_ingester/vendor
 deepfence_ingester/deepfence_ingester
